LIB-89 Increase jump link specificity (fix new nav tab issue)

--- a/custom/themes/lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/lib_unb_ca/src/scss/style.scss
@@ -3,7 +3,8 @@
 
 /* OVERRIDES */
 /* Nav affix anchor offset */
-:target:before {
+a:target:before,
+h2:target:before {
   content: "\00a0";
   display: block;
   height: 156px;
